syntax = "proto3";

package einride.bigquery.example.v1;

import "google/type/datetime.proto";

message ExampleDateTime {
  google.type.DateTime date_time = 1;
}
