syntax = "proto3";

package einride.bigquery.example.v1;

import "google/protobuf/wrappers.proto";

message ExampleMap {
  map<string, string> string_to_string = 1;
  map<string, Nested> string_to_nested = 2;
  map<string, Enum> string_to_enum = 3;

  map<int32, string> int32_to_string = 4;
  map<int64, string> int64_to_string = 5;
  map<uint32, string> uint32_to_string = 6;
  map<bool, string> bool_to_string = 7;

  map<string, google.protobuf.FloatValue> string_to_float_value = 8;

  enum Enum {
    ENUM_UNSPECIFIED = 0;
    ENUM_VALUE1 = 1;
    ENUM_VALUE2 = 2;
  }

  message Nested {
    map<string, string> string_to_string = 1;
  }
}
